--- a/test.html
+++ b/test.html
@@ -28,7 +28,7 @@
 
       <td>
         <h1>Aidan Villegas</h1>
-        <p><strong>Role:</strong> Speech Pathologist</p>
+        <p><strong>Role:</strong> Pathologist</p>
         <p>Social Media: <a href="https://www.google.com/"><button>google</button></a></p>
       </td>
     </tr>
